gccida/g2/save_line_notes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/save_line_notes/src/haifa-sched.c:1679:4: error: expected ';' after expression
rtx v4; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/save_line_notes/src/haifa-sched.c:1679:5: error: use of undeclared identifier 'v4'
rtx v4; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/save_line_notes/src/haifa-sched.c:1684:1: error: use of undeclared identifier 'v4'
v4 = line_note_head[b]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/save_line_notes/src/haifa-sched.c:1694:23: error: use of undeclared identifier 'v4'
v5[rtint].line_note = v4; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/save_line_notes/src/haifa-sched.c:1698:1: error: use of undeclared identifier 'v4'
v4 = head; 
^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/save_line_notes/src/obj/haifa-sched.o] Error 1
